--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ body {
 
 
 .container {
-	margin-top: calc(50px + 10vh);
+	margin-top: calc(40vh);
 	font-family: DIN, "aria";
 	color: var(--text);
 	display: flex;
@@ -61,7 +61,9 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	transition: margin-top 1s;
 }
+
 
 .bio {
 	transition: opacity 1s 1.5s;
@@ -81,12 +83,13 @@ body {
 .portfolio {
 	width: 60vw;
 	margin-top: 50vh;
-	margin-left: 20vw;
+	margin-left: 50%;
+	transform: translateX(-50%);
 	padding: 50px;
 	border-radius: 30px;
 	overflow: auto;
 	opacity: 0;
-	transition: opacity 1s 2.5s;
+	transition: opacity 1s 1.5s;
 	font-family: DIN, "aria";
 	color: var(--text);
 	background-color: var(--item-background);
@@ -101,7 +104,6 @@ body {
 	margin-bottom: 10px;
 	background-color: var(--item);
 	border-radius: 15px;
-	width: 60vw;
 	transition: padding .5s, border-radius .5s, background-color .5s;
 }
 .item:hover {
@@ -175,12 +177,5 @@ body {
 	.bio {
 		width: 70vw;
 		margin-bottom: 20px;
-	}
-	.item {
-	}
-	.portfolio {
-	}
-	#fullmenu {
-		margin-left: -80vw;
 	}
 }
