--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,47 +10,40 @@
 	--item: #323032;
 	--item-background: #6868686f;
 **/
+
 :root {
 	--background: #121012;
 	--menu: #121012;
 	--text: #d8d6d3;
 	--text-hover: #d8d6d388;
-	--item: #323032;
+	--item: #6763673f;
 	--item-background: #222022;
 }
 body {
+	overflow: hidden;
 	background-color: var(--background);
 	margin: 0;
 }
-#menu{
-	position: fixed;
+#back {
 	top: 0;
+	position: absolute;
 	width: 100vw;
-	height: 60px;
-	background-color: var(--menu);
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
+
+	overflow-x: hidden;
+	overflow-y: visible;
+	z-index: -2;
+	opacity: 0.3;
+}
+#it {
 	opacity: 0;
-	transition: opacity .5s;
-	gap: 50px;
-}
-#menu:hover {
-	opacity: 1;
-}
-#menu a{
+	width: 100vw;
+	height: 120vh;
+	margin-top: 0vh;
+	transition: margin-top 0s;
+	object-fit: cover;
+	transition: opacity 2s;
 
-	text-decoration: none;
-	color: var(--text);
-	font-family: DIN, "aria";
-	font-size: 2rem;
-	transition: opacity .5s;
 }
-#menu a:hover{
-	opacity: 0.5;
-}
-
 .container {
 	margin-top: calc(40vh);
 	font-family: DIN, "aria";
@@ -60,15 +53,51 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	transition: margin-top 1s;
+	transition: margin-top 1s, opacity .3s;
 }
 
+#menu {
+	position: fixed;
+	left: 2vw;
+	display: flex;
+	flex-direction: row;
+	gap: 50px;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: -5vh;
+	opacity: 0;
+	transition: bottom 1s 2s, opacity 2s 2s;
+}
+.cont {
+	max-height: 90vh;
+}
+.tab {
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-family: DIN;
+	font-variant: small-caps;
+	text-decoration: underline;
+	font-size: 40px;
+	position: relative;
 
+	height: 100px;
+	width: 200px;
+	color:#d8d6d3;
+	border-radius: 20px;
+	bottom: 0;
+	transition: bottom .5s cubic-bezier(0.19, 1, 0.42, 1), opacity .5s, color .5s;
+}
+.tab:hover {
+	bottom: 1vh;
+	opacity: .8;
+}
 .bio {
 	transition: opacity 1s 1.5s;
 	opacity: 0;
 	margin-top: 30px;
-	width: 50vw;
+	width: 30vw;
 }
 .bio img {
 	height: 60px;
@@ -81,17 +110,19 @@ body {
 }
 .portfolio {
 	width: 60vw;
-	margin-top: 50vh;
+	margin-top: 3vh;
 	margin-left: 50%;
 	transform: translateX(-50%);
 	padding: 50px;
 	border-radius: 30px;
 	overflow: auto;
-	opacity: 0;
-	transition: opacity 1s 1.5s;
 	font-family: DIN, "aria";
 	color: var(--text);
-	background-color: var(--item-background);
+	background-color: #00000000;
+	max-height: 70vh;
+	overflow: scroll;
+	transition: opacity .3s;
+	opacity: 0;
 }
 #porttitle {
 	font-size: 70px;
@@ -113,7 +144,7 @@ body {
 
 .item p:nth-of-type(1){ /*title*/
 	margin: 0;
-	font-size: 30px;
+	font-size: 25px;
 }
 .item p:nth-of-type(2){font-size: 17px;} /*description*/
 .item p:nth-of-type(3){/*language*/
@@ -172,6 +203,14 @@ body {
 }
 
 
+
+@media only screen and (max-width: 1300px) {
+	.portfolio {
+		left: 10vw;
+		width: 80vw;
+	}
+}
+
 @media only screen and (max-width: 800px) {
 	.bio {
 		width: 70vw;
@@ -212,6 +251,7 @@ body {
 	.portfolio {
 		left: 10vw;
 		width: 80vw;
+		background-color: #00000000;
 	}
 }
 @media only screen and (max-width: 450px) {
@@ -223,6 +263,15 @@ body {
 	}
 	#porttitle {
 		font-size: 30px;
+	}
+	#menu {
+		gap: 5px;
+	}
+	.tab {
+		font-size: 35px;
+		margin-left: 0;
+		margin-right: 0;
+		width: 150px;
 	}
 
 }
