--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,9 +65,9 @@ body {
 	gap: 50px;
 	left: 50%;
 	transform: translateX(-50%);
-	bottom: -5vh;
+	top: -5vh;
 	opacity: 0;
-	transition: bottom 1s 2s, opacity 2s 2s;
+	transition: top 1s 2s, opacity 2s 2s;
 }
 .cont {
 	max-height: 90vh;
@@ -88,7 +88,11 @@ body {
 	color:#d8d6d3;
 	border-radius: 20px;
 	bottom: 0;
-	transition: bottom .5s cubic-bezier(0.19, 1, 0.42, 1), opacity .5s, color .5s;
+	transition: bottom .5s cubic-bezier(0.19, 1, 0.42, 1), opacity .5s, color .5s, background-color .5s;
+}
+.active {
+	color:#ffffff;
+	bottom: 1vh;
 }
 .tab:hover {
 	bottom: 1vh;
@@ -111,15 +115,15 @@ body {
 }
 .portfolio {
 	width: 60vw;
-	margin-top: 3vh;
+	margin-top: 20vh;
 	margin-left: 50%;
 	transform: translateX(-50%);
+	box-sizing: border-box;
 	padding: 50px;
 	border-radius: 30px;
 	overflow: auto;
 	font-family: DIN, "aria";
 	color: var(--text);
-	background-color: #00000000;
 	max-height: 70vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
@@ -212,42 +216,10 @@ body {
 
 @media only screen and (max-width: 1300px) {
 	.portfolio {
-		left: 10vw;
 		width: 80vw;
 	}
 }
-@media only screen and (max-height: 800px) {
-	.portfolio {
-		max-height: 60vh;
-	}
-}
-@media only screen and (max-height: 600px) {
-	.portfolio {
-		max-height: 50vh;
-	}
-}
-@media only screen and (max-width: 800px) {
-	.bio {
-		width: 70vw;
-		margin-bottom: 20px;
-		font-size: 20px;
-	}
-	#name {
-		font-size: 50px;
-	}
-	.item p:nth-of-type(1){ /*title*/
-		margin: 0;
-		font-size: 20px;
-	}
-	.item p:nth-of-type(2){font-size: 14px;} /*description*/
-	.portfolio {
-		left: 10vw;
-		width: 80vw;
-	}
-	#porttitle{
-		font-size: 40px;
-	}
-}
+
 
 @media only screen and (max-width: 800px) {
 	.bio {
@@ -258,26 +230,42 @@ body {
 	#name {
 		font-size: 50px;
 	}
-	#name img {
-		height: 50px;
-	}
 	.item p:nth-of-type(1){ /*title*/
 		margin: 0;
 		font-size: 20px;
 	}
 	.item p:nth-of-type(2){font-size: 14px;} /*description*/
 	.portfolio {
-		left: 10vw;
-		width: 80vw;
-		background-color: #00000000;
+		width: 90vw;
+	}
+	#menu {
+		width: 100vw;
+		gap: 0;
+		margin-top: 0;
+		top: 0;
+	}
+	.tab {
+		margin: 0;
+		margin-top: 0;
+		top: 0;
+		background-color: var(--item);
+		flex: 1;
+		border-radius: 0;
+
+	}
+	.active {
+		bottom: 0;
+		background-color: var(--item-background);
+
 	}
 }
+
 @media only screen and (max-width: 450px) {
 	#name {
-		font-size: 30px;
+		font-size: 40px;
 	}
 	#name img {
-		height: 30px;
+		height: 40px;
 	}
 	#porttitle {
 		font-size: 30px;
@@ -291,5 +279,10 @@ body {
 		margin-right: 0;
 		width: 150px;
 	}
-
+	.portfolio {
+		width: 100vw;
+		padding: 0;
+		border-radius: 0;
+		max-height: 80vh;
+	}
 }
