--- a/stylesheet.css
+++ b/stylesheet.css
@@ -257,29 +257,25 @@ body {
 	.active {
 		bottom: 0;
 		background-color: var(--item-background);
-		font-size: 45px;
+		font-size: 50px;
 	}
-
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 600px) {
 	#name {
 		font-size: 40px;
 	}
 	#name img {
 		height: 40px;
 	}
-	#porttitle {
-		font-size: 30px;
-	}
-	#menu {
-		gap: 5px;
-	}
 	.tab {
 		font-size: 35px;
 		margin-left: 0;
 		margin-right: 0;
 		width: 150px;
+	}
+	.active {
+		font-size: 40px;
 	}
 	.portfolio {
 		width: 100vw;
