--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -169,11 +169,15 @@ body {
 
 
 @media only screen and (max-width: 500px) {
-
 	.alphabet_letter {
-		min-width: 20px;
+		min-width: 30px;
 		min-height: 20px;
-		font-size: 30px;
+	}
+}
+@media only screen and (max-width: 440px) {
+	.alphabet_letter {
+		min-width: 25px;
+		min-height: 20px;
 	}
 }
 
