--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -125,8 +125,8 @@ body {
 	border: 3px solid #63716d;
 }
 .in_square {
-	color: #f78379;
-	border: 3px solid #f78379;
+	color: #e19e52;
+	border: 3px solid #e19e52;
 }
 .correct_square {
 	color: #90d69b;
