--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -59,6 +59,9 @@ body {
 .alphabet a {
 	color:#D1E8E2;
 }
+.pressed {
+	opacity: .5;
+}
 .alphabet_letter {
 	background-color: #4a434a;
 	outline: none;
@@ -74,8 +77,9 @@ body {
 	margin: 2px;
 	border-radius: 5px;
 	padding-left: 1vw;
-	transition: color .5s, border .5s, background-color .5s;
+	transition: color .5s, border .5s, background-color .5s, opacity .1s;
 }
+
 .letter_wrong {
 	background-color: #292429;;
 }
