--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -83,6 +83,7 @@ body {
 .letter_wrong {
 	background-color: #292429;
 	color: #D1E8E255;
+	opacity: 0.5 !important;
 }
 .letter_in{
 	background-color: #e19e52;
