--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -121,14 +121,14 @@ body {
 	line-height: 65px;
 	position:relative;
 	background-color: #4C5551;
-	border: 3px solid #FFCB9A;
-	border-radius: 5px;
+	border: 3px solid #F2F3F2;
+	border-radius: 2px;
 	-webkit-transition: border .5s, background-color .5s, color .5s;
 	-o-transition: border .5s, background-color .5s, color .5s;
 	transition: border .5s, background-color .5s, color .5s;
 }
 .selected_square {
-	border: 3px solid #F1F8F2;
+	border: 3px solid #FFC89A;
 	background-color: #5C6561;
 }
 .wrong_square {
