--- a/wordle/stylesheet.css
+++ b/wordle/stylesheet.css
@@ -121,14 +121,13 @@ body {
 	line-height: 65px;
 	position:relative;
 	background-color: #4C5551;
-	border: 3px solid #F2F3F2;
+	border: 1px solid #F2F3F2;
 	border-radius: 2px;
-	-webkit-transition: border .5s, background-color .5s, color .5s;
-	-o-transition: border .5s, background-color .5s, color .5s;
-	transition: border .5s, background-color .5s, color .5s;
+	transition: border .5s, background-color .5s, color .5s, border-radius .5s;
 }
 .selected_square {
-	border: 3px solid #FFC89A;
+	border: 1px solid #B2b3b2;
+	border-radius: 5px;
 	background-color: #5C6561;
 }
 .wrong_square {
