--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,8 +22,9 @@
 }
 body {
 	overflow-x: hidden;
-	background-color: var(--background);
+	background-color: var(--item-background);
 	margin: 0;
+	transition: background-color 1s 1s;
 }
 #back {
 	top: 0;
@@ -68,7 +69,7 @@ body {
 	transform: translateX(-50%);
 	top: 0vh;
 	opacity: 0;
-	transition: opacity 1s 1.5s;
+	transition: opacity 1s 1s;
 }
 .cont {
 	max-height: 90vh;
@@ -101,7 +102,7 @@ body {
 	opacity: .8;
 }
 .bio {
-	transition: opacity 1s 1.5s;
+	transition: opacity 1s 1s;
 	opacity: 0;
 	margin-top: 30px;
 	width: 40vw;
@@ -194,36 +195,24 @@ body {
 
 .panel {
 	position: fixed;
-	z-index: 405;
+	z-index: 402;
 	background: var(--background);
 	width: 50vw;
 	height: 100vh;
 	top: 0;
 	left: 0;
-	transition: left 1s .25s, top 1s .25s, transform 1s .25s;
-	pointer-events: none;
-}
-.panel2 {
-	position: fixed;
-	z-index: 401;
-	background: var(--item-background);
-	width: 100vw;
-	height: 100vh;
-	top: 0;
-	opacity: 1;
-	transition: opacity 1s .75s;
+	transition: left 1s, top 1s, transform 1s;
 	pointer-events: none;
 }
 #right {
 	left: 50vw;
 }
-
 #name {
-	z-index: 402;
-	font-size: 70px;
-	transition: color .5s, opacity 1s .25s, max-width 2s;
+	z-index: 409;
+	font-size: 60px;
+	transition: color .5s, opacity 1s 0s, max-width 1s;
 	overflow: hidden;
-	opacity: 0;
+	opacity: 1;
 	cursor: pointer;
 	text-align: center;
 }
