--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,7 +134,7 @@ body {
 }
 .portfolio {
 	width: 60vw;
-	margin-top: 20vh;
+	margin-top: max(100px, 20vh);
 	margin-left: 50%;
 	transform: translateX(-50%);
 	box-sizing: border-box;
@@ -143,11 +143,12 @@ body {
 	overflow: auto;
 	font-family: DIN, "aria";
 	color: var(--text);
-	max-height: 70vh;
+	max-height: 79vh;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	transition: opacity .3s;
 	opacity: 0;
+	padding-top: 0;
 }
 #porttitle {
 	font-size: 70px;
