--- a/stylesheet.css
+++ b/stylesheet.css
@@ -165,6 +165,7 @@ body {
 	font-style: italic;
 	text-align: left;
 	padding: 20px;
+	margin-top: 20px;
 	margin-bottom: 10px;
 	background-color: var(--item);
 	border-radius: 3px;
