--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,18 +24,7 @@ body {
 	overflow-x: hidden;
 	background-color: var(--item-background);
 	margin: 0;
-	transition: background-color 1s 1s;
-}
-#back {
-	top: 0;
-	position: absolute;
-	width: 100vw;
-
-	overflow-x: hidden;
-	overflow-y: visible;
-	z-index: -2;
-	opacity: 0.3;
-	transition: opacity 1s;
+	transition: background-color 1s .5s;
 }
 #it {
 	opacity: 0;
@@ -56,7 +45,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	transition: margin-top 1s 1s, opacity .3s, transform 1s 1s;
+	transition: margin-top 1s, opacity .3s, transform 1s .5s;
 }
 
 #menu {
@@ -117,7 +106,7 @@ body {
 	color: #c7c7c7;
 }
 .bio {
-	transition: opacity 1s 1s;
+	transition: opacity 1s .5s;
 	opacity: 0;
 	margin-top: 30px;
 	width: 40vw;
@@ -209,20 +198,6 @@ body {
 
 .bio {font-size: 20px;}
 
-.panel {
-	position: fixed;
-	z-index: 402;
-	background: var(--background);
-	width: 50vw;
-	height: 100vh;
-	top: 0;
-	left: 0;
-	transition: left 1s, top 1s, transform 1s;
-	pointer-events: none;
-}
-#right {
-	left: 50vw;
-}
 #name {
 	z-index: 409;
 	font-size: 60px;
