--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,6 +125,7 @@ body {
 .portfolio {
 	width: 60vw;
 	margin-top: max(100px, 20vh);
+	margin-bottom: 20px;
 	margin-left: 50%;
 	transform: translateX(-50%);
 	box-sizing: border-box;
@@ -341,9 +342,16 @@ body {
 		transform: translateY(20vh) !important;
 	}
 	.portfolio {
-		width: 100vw;
+		width: 90vw;
 		padding: 0;
 		border-radius: 0;
 		max-height: 80vh;
+		margin-bottom: 20px;
+		margin-top: max(80px, 15vh);
 	}
+	.item p:nth-of-type(1){ /*title*/
+		margin: 0;
+		font-size: 17px;
+	}
+	.item p:nth-of-type(2){font-size: 13px;} /*description*/
 }
