--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,6 +173,13 @@ body {
 	padding-left: 25px;
 	padding-right: 5px;
 }
+.item-b-title {
+	transition: transform .5s;
+}
+.item-b:hover p:nth-of-type(1){
+	transform: translateX(10px);
+}
+
 .item { /*.portfolio div*/
 	padding: 20px;
 	margin-bottom: 10px;
@@ -191,10 +198,13 @@ body {
 }
 .item:hover p:nth-of-type(3){opacity:1;}
 
+
 .item p:nth-of-type(1){ /*title*/
 	margin: 0;
 	font-size: 25px;
 	font-weight: bold;
+	transform: translateX(0);
+
 }
 .item p:nth-of-type(2){font-size: 17px;} /*description*/
 .item p:nth-of-type(3){/*language*/
