--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,7 +159,7 @@ body {
 	padding: 20px;
 	margin-top: 20px;
 	margin-bottom: 10px;
-	background-color: var(--item);
+	background-color: var(--item-background-2);
 	border-radius: 3px;
 	transition: padding .5s, border-radius .5s, background-color .5s;
 }
@@ -169,6 +169,7 @@ body {
 	transform: translateY(10%);
 }
 .item-b:hover {
+	background-color: var(--item);
 	border-radius: 5px;
 	padding-left: 25px;
 	padding-right: 5px;
@@ -183,7 +184,7 @@ body {
 .item { /*.portfolio div*/
 	padding: 20px;
 	margin-bottom: 10px;
-	background-color: var(--item);
+	background-color: var(--item-background-2);
 	border-radius: 2px;
 	transition: padding .5s, border-radius .5s, background-color .5s;
 }
@@ -191,7 +192,7 @@ body {
 	color: var(--text);
 }
 .item:hover {
-	background-color: var(--item-background-2);
+	background-color: var(--item);
 	border-radius: 5px;
 	padding-left: 30px;
 	padding-right: 10px;
@@ -328,6 +329,19 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+	.item {
+		background-color: var(--item);
+	}
+	.item:hover {
+		background-color: var(--item-background-2);
+	}
+	.item-b {
+		background-color: var(--item);
+	}
+	.item-b:hover {
+		background-color: var(--item-background-2);
+	}
+	
 	#name {
 		font-size: 35px;
 	}
@@ -362,6 +376,7 @@ body {
 	.item p:nth-of-type(1){ /*title*/
 		margin: 0;
 		font-size: 17px;
+		font-weight: bold;
 	}
-	.item p:nth-of-type(2){font-size: 13px;} /*description*/
+	.item p:nth-of-type(2){font-size: 12px;} /*description*/
 }
