--- a/palette/stylesheet.css
+++ b/palette/stylesheet.css
@@ -1,7 +1,5 @@
-@font-face {
-	font-family: DIN;
-	src: url("../fonts/DIN.woff2")
-}
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&family=Inconsolata:wght@500&display=swap');
+
 
 body {
 	background-color: #292429;
@@ -27,7 +25,7 @@ body {
     width: 100%;
     text-align: center;
     font-size: 20px;
-    font-family: DIN;
+    font-family: "Inconsolata", "arial";
     user-select: none;
     color:#292429;
     background-clip: text;
@@ -43,7 +41,7 @@ body {
     position:absolute;
     left: 50%;
     transform: translateX(-50%);
-    font-family: DIN;
+    font-family: Inconsolata, "arial";
     font-size: 20px;
     background-color: #FFFFFF;
     opacity: 0.5;
