--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ body {
 
 }
 .container {
-	transform: translateY(calc(50px + 20vh));
+	transform: translateY(calc(50px + 10vh));
 	font-family:Inconsolata, "aria";
 	color: var(--text);
 	display: flex;
@@ -127,23 +127,22 @@ body {
 	font-style: italic;
 	text-align: left;
 	padding: 20px;
-	margin-top: 20px;
-	margin-bottom: 10px;
-	background-color: var(--item-background-2);
+	margin: 20px;
+	background-color: var(--item);
 	border-radius: 3px;
 	opacity: 0;
 	transform: translateY(15%);
 	transition: padding .5s, border-radius .5s, background-color .7s, opacity .5s, margin .5s, transform .5s;
 }
 .bio-item:hover {
-	background-color: var(--item) !important;
+	background-color: var(--item-background-2) !important;
 	border-radius: 5px;
-	padding-left: 25px;
-	padding-right: 10px;
+	padding-top: 30px;
+	padding-bottom: 10px;
 }
 
 .portfolio {
-	width: 60vw;
+	width: 80vw;
 	margin-top: max(100px, 20vh);
 	margin-bottom: 20px;
 	margin-left: 50%;
@@ -151,15 +150,16 @@ body {
 	box-sizing: border-box;
 	padding: 50px;
 	border-radius: 30px;
-	overflow: auto;
 	font-family:Inconsolata, "aria";
 	color: var(--text);
-	max-height: 79vh;
-	overflow-y: scroll;
+	overflow-y:visible;
 	overflow-x: hidden;
 	transition: opacity .3s;
 	opacity: 0;
 	padding-top: 0;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-content: space-between;
 }
 #porttitle {
 	font-size: 70px;
@@ -185,10 +185,17 @@ body {
 
 .item { /*.portfolio div*/
 	padding: 20px;
-	margin-bottom: 10px;
-	background-color: var(--item-background-2);
+	background-color: var(--item);
+	margin: 10px;
 	border-radius: 2px;
-	transition: padding .5s, border-radius .5s, background-color .5s;
+	transform: translateY(10%);
+	opacity: 0;
+	transition: padding .5s, border-radius .5s, background-color .5s, transform .5s, opacity .5s;
+}
+.item_transition {
+	opacity: 0;
+	transform: translateY(10%);
+	transition: transform .5s, opacity .5s;
 }
 .item a {
 	color: var(--text);
@@ -196,8 +203,8 @@ body {
 .item:hover {
 	background-color: var(--item);
 	border-radius: 5px;
-	padding-left: 30px;
-	padding-right: 10px;
+	padding-top: 25px;
+	padding-bottom: 15px;
 }
 .item:hover p:nth-of-type(1){color: #eeeeee;}
 .item:hover p:nth-of-type(3){opacity:1;}
@@ -235,7 +242,6 @@ body {
 	cursor: pointer;
 	text-align: center;
 	font-weight: bold;
-
 	display: flex;
 }
 #name:hover {
@@ -252,6 +258,9 @@ body {
 	transition: opacity .5s;
 	cursor: pointer;
 	z-index: 0;
+}
+.contacts {
+	margin-bottom: 40px;
 }
 .contact {
 	position: relative;
@@ -270,56 +279,48 @@ body {
 	text-decoration: none;
 	font-size: 45px;
 }
-#p_title {
-	transition: opacity .5s;
-}
-#p_title:hover {
-	opacity: 0.5;
-}
 
 
+.item {
+	
+}
+.item:hover {
+	background-color: var(--item-background-2);
+}
 
 @media only screen and (max-width: 1300px) {
 	.portfolio {
 		width: 80vw;
 	}
 	#bio{
-		width: 80vw;
+		width: 85vw;
 	}
 }
 
 
 @media only screen and (max-width: 900px) {
-	.panel {
-		top: 0;
-		left: 0;
-		width: 100vw;
-		height: 50vh;
-	}
-	#right {
-		left: 0;
-		top: 50vh;
-	}
 
-	.bio {
-		width: 100vw;
+	#bio {
+		width: 95vw;
 		margin-bottom: 20px;
 		font-size: 20px;
 	}
-	#name {
-		font-size: 60px;
-	}
+
 	.item p:nth-of-type(1){ /*title*/
 		margin: 0;
-		font-size: 20px;
-	}
-	.item p:nth-of-type(2){font-size: 14px;} /*description*/
-	.bio-item p:nth-of-type(1){ /*title*/
 		font-size: 27px;
+	}
+	.item p:nth-of-type(2){font-size: 17px;} /*description*/
+	.bio-item p:nth-of-type(1){ /*title*/
+		font-size: 28px;
 	}
 	.bio-item{font-size: 18px;} /*description*/
 	.portfolio {
+		grid-template-columns: 1fr 1fr;
 		width: 90vw;
+	}
+	#bio {
+		grid-template-columns: 1fr 1fr;
 	}
 	#menu {
 		width: 100vw;
@@ -344,28 +345,13 @@ body {
 	}
 }
 
-@media only screen and (max-width: 600px) {
-	.item {
-		background-color: var(--item);
-	}
-	.item:hover {
-		background-color: var(--item-background-2);
-	}
-	.bio-item {
-		background-color: var(--item);
-	}
-	.bio-item:hover {
-		background-color: var(--item-background-2);
-	}
-	#bio {
-		display:block;
-	}
+@media only screen and (max-width: 700px) {
 	
 	#name {
 		font-size: 45px;
+		margin-bottom: 20px;
 	}
 	#name img {
-		height: 35px;
 		display: none;
 	}
 	#bio {
@@ -385,6 +371,12 @@ body {
 	#container {
 		transform: translateY(20vh) !important;
 	}
+	#bio { 
+		grid-template-columns: 1fr;
+	}
+	.bio-item{
+		margin: 10px;
+	}
 	.portfolio {
 		width: 90vw;
 		padding: 0;
@@ -392,11 +384,13 @@ body {
 		max-height: 80vh;
 		margin-bottom: 20px;
 		margin-top: max(80px, 15vh);
+		grid-template-columns: 1fr;
 	}
 	.item p:nth-of-type(1){ /*title*/
 		margin: 0;
-		font-size: 17px;
+		font-size: 24px;
 		font-weight: bold;
 	}
-	.item p:nth-of-type(2){font-size: 12px;} /*description*/
+	.item p:nth-of-type(2){font-size: 17px;} /*description*/
+	
 }
