Added blue tintt

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&family=Inconsolata:wght@500&display=swap');
 
 
-/**
---background: #292429;
-	--menu: #191419;
-	--text: #e8e6e3;
-	--text-hover: #adacaa;
-	--item: #323032;
-	--item-background: #6868686f;
-**/
+
+
 
 :root {
 	--background: #121012;
 	--menu: #121012;
 	--text: #d8d6d3;
 	--text-hover: #d8d6d388;
-	--item: #252425;
+	--item: #1d2138;
 	--item-background-2: #22202200;
-	--item-background: #222022;
+	--item-background: #121012;
+	--tab: #757575;
+	--tab-active: #c7c7c7;
+	--title: #b0b0b0;
 }
+
+/**
+:root {
+	--background: #B6C2D9;
+	--item-background: #B6C2D9;
+	--menu: #121012;
+	--text: #121012;
+	--text-hover: #22202200;
+	--item: #D6E2F9;
+	--title: #121012;
+	--item-background-2: #22202200;
+
+	--tab: #757575;
+	--tab-active: #c7c7c7;
+	--text-hover-col: #121012;
+}**/
+
 body {
 	overflow-x: hidden;
 	background-color: var(--item-background);
@@ -75,7 +89,7 @@ body {
 
 	height: 100px;
 	width: 200px;
-	color:#757575;
+	color: var(--tab);
 	border-radius: 20px;
 	bottom: 0;
 	transition: bottom .5s cubic-bezier(0.19, 1, 0.42, 1), opacity .3s, color .3s, background-color .3s, font-size .3s, transform .3s;
@@ -98,11 +112,11 @@ body {
 }
 .active {
 	background-color: var(--background);
-	color:#c7c7c7;
+	color:var(--tab-active);
 }
 
 .tab:hover {
-	color: #c7c7c7;
+	color: var(--tab-active);
 }
 .bio img {
 	height: 60px;
@@ -173,7 +187,7 @@ body {
 
 .item-b-title {
 	font-size: 30px;	
-	color: #b0b0b0;
+	color: var(--title);
 	font-style: italic;
 	margin:0;
 	margin-bottom: 10px;
@@ -183,7 +197,7 @@ body {
 
 .bio-item:hover p:nth-of-type(1){
 	transform: translateX(10px);
-	color: #eeeeee;
+	color: var(--text-hover-col);
 }
 
 .item { /*.portfolio div*/
