--- a/palette/stylesheet.css
+++ b/palette/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&family=Inconsolata:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
 
 
 body {
@@ -25,7 +25,7 @@ body {
     width: 100%;
     text-align: center;
     font-size: 20px;
-    font-family: "Inconsolata", "arial";
+    font-family: "SUSE", "arial";
     user-select: none;
     color:#292429;
     background-clip: text;
@@ -41,7 +41,7 @@ body {
     position:absolute;
     left: 50%;
     transform: translateX(-50%);
-    font-family: Inconsolata, "arial";
+    font-family: SUSE, "arial";
     font-size: 20px;
     background-color: #FFFFFF;
     opacity: 0.5;
